<resources>
    <string name="app_name">SquatCounter</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_squatcounter">Количество приседаний</string>
    <string name="title_phase">Фаза</string>
    <string name="title_accelerometer">Акселерометр</string>
    <string name="title_gyroscope">Гироскоп</string>
    <string name="title_button_start">Старт</string>
    <string name="title_button_stop">Стоп</string>
    <string name="Speed">Скорость (км/час)</string>
</resources>