<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_squatcounter"
            android:layout_marginTop="60dp"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textView"/>

    <TextView
            android:id="@+id/valueSquatcounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="32"
            android:textSize="50dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_phase"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/valueSquatcounter" android:id="@+id/textView3"/>

    <TextView
            android:id="@+id/valuePhase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textSize="40dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>

    <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:text="@string/title_gyroscope"
            app:layout_constraintTop_toBottomOf="@+id/valuePhase"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:id="@+id/gyroX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="X:0"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <TextView
            android:id="@+id/gyroY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="Y:0"
            app:layout_constraintStart_toStartOf="@+id/gyroX"
            app:layout_constraintTop_toBottomOf="@+id/gyroX"/>
    <TextView
            android:id="@+id/gyroZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="Z:0"
            app:layout_constraintStart_toStartOf="@+id/gyroY"
            app:layout_constraintTop_toBottomOf="@+id/gyroY"/>


    <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="20dp"
            android:text="@string/title_accelerometer"
            app:layout_constraintTop_toBottomOf="@+id/valuePhase"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:id="@+id/accelerX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="X:0"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5"/>
    <TextView
            android:id="@+id/accelerY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Y:0"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="@+id/accelerX"
            app:layout_constraintTop_toBottomOf="@+id/accelerX"/>
    <TextView
            android:id="@+id/accelerZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Z:0"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="@+id/accelerY"
            app:layout_constraintTop_toBottomOf="@+id/accelerY"/>

    <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="20dp"
            android:text="@string/Speed"
            app:layout_constraintTop_toBottomOf="@+id/accelerZ"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6"/>

    <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_button_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>